--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<img id="avatar" src="images/photo-profile.jpg" class="rounded-circle mx-auto d-block">
 		<img src="" alt=""><br>
 		<h1><strong>Emmanuel Narcisse</strong></h1>
-		<h2><strong>CEO @Emadis</strong></h2><br>
+		<h2><strong>Développeur @Emadis</strong></h2><br>
 		<h3>0692 72 35 47</h3>
 		<h3>emmanuel.narcisse@emadis-shop.fr</h3><br>
 		<p>Profil sur 10 ans d'entreprenariat dans le numérique et l'entertainment. <strong>Expert en transformation digitale </strong> vous permettant l'accélaration de votre croissance.</p>
@@ -51,7 +51,7 @@
 
 	<!--expériences-->
 	<div class="container card text-center">	
-			<h2>Expériences</h2><br>
+			<h2 class="btn btn-outline-secondary">Expériences</h2><br>
 				<h3>2012 - 2018</h3>
 					<p>@Emadis - CEO - Missions: développement d'une place de marché B to B. Mise en place d'outils d'automatisation des processus de vente.</p><a href="https://emadis-shop.fr">www.emadis-shop.fr</a><br>
 				<h3>2013 - 2014</h3>
@@ -66,7 +66,7 @@
 
 	<!--formation-->	
 	<div class="container card text-center">
-			<h2>Formations</h2>
+			<h2 class="btn btn-outline-secondary">Formations</h2>
 			<div class="spacer"></div>
 				<h3>2015 - 2018</h3>
 					<img src="images/lewagon.png" alt="lewagon-logo" id="wagon-logo">
@@ -85,7 +85,7 @@
 	<!--qualifications-->
 	<div class="container card text-center resize-img">
 
-		<h2>Qualifications</h2><br>
+		<h2 class="btn btn-outline-secondary">Qualifications</h2><br>
 		<div class="spacer"></div>
 			<h3>Web</h3><br>
 				<div class="container logiciel">
@@ -168,7 +168,7 @@
 
 	<div class="container card text-center resize-img">
 
-		<h2>Distinctions</h2>
+		<h2 class="btn btn-outline-secondary">Distinctions</h2>
 			<div class="spacer"></div>
 			<div class="container text-center">
 				<div class="row">
@@ -194,14 +194,14 @@
 	<!--témoignages-->
 
 	<div class="container card text-center">
-		<h2>Témoignages</h2>
+		<h2 class="btn btn-outline-secondary">Témoignages</h2>
 		<div class="spacer"></div>
 
 																																									
 		  <div class="container">
 		    <div class="row">
 		    	<div class="col.12">
-		    		<p>"Grâce à Emmanuel, nous avons augmenter notre chiffre d'affaire de 95 % entre 2016 et 2017! Un élement innovant et sans cesse en quête d'apprentissage."</p><p class="italic">Emmanuelle Paillot (PDG Emadistribution)</p><br>
+		    		<p>"Grâce à Emmanuel, nous avons augmenter notre chiffre d'affaire de 85 % entre 2016 et 2017! Un élement innovant et sans cesse en quête d'apprentissage."</p><p class="italic">Emmanuelle Paillot (Gérante Emadistribution)</p><br>
 		     	</div>
 		     	 <div class="col.12">
 		     		 <p>"Les arts martiaux ont pris une tout autre image depuis la stratégie élaborer par Emmanuel, une mise en valeur à l'américaine comme on dit et une excellente gestion des équipes de productions." <br></p><p class="italic">Cédric Certenais (Président MMA974 et FFSCDA)</p><br>
@@ -220,7 +220,7 @@
 
 		
 		<div class="container card text-center">
-			<h2>Presses</h2>
+			<h2 class="btn btn-outline-secondary">Presses</h2>
 			<div class="spacer"></div>
 			<div class="row">
 				<div class="col-6 col-sm-3">
