--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 							<img src="images/getresponse.png" alt="getresponse" id="getresponse">
 						</div>
 						<div class="col-6 col-sm-4">
-							<img src="Images/streak.png" alt="streak" id="streak">
+							<img src="images/streak.png" alt="streak" id="streak">
 						</div>	
 						<div class="col-6 col-sm-4">
-							<img src="Images/middleman.png" alt="middleman" id="middleman">
+							<img src="images/middleman.png" alt="middleman" id="middleman">
 						</div>	
 
 								
@@ -150,14 +150,14 @@
 					<div class="row">
 
 						<div class="col-6 col-md-4 col-sm-3">
-							<img src="Images/adobe-premiere.png" alt="adobe-premiere" class="adobe" id="adobe-premiere">
+							<img src="images/adobe-premiere.png" alt="adobe-premiere" class="adobe" id="adobe-premiere">
 						</div>
 						<div class="col-6 col-md-4 col-sm-3">
-							<img src="Images/adobe-after-effect.png" alt="adobe-after-effect" class="adobe" id="adobe-after">
+							<img src="images/adobe-after-effect.png" alt="adobe-after-effect" class="adobe" id="adobe-after">
 						</div>	
 
 						<div class="col-6 col-md-4 col-sm-3">
-							<img src="Images/photoshop.png" alt="photoshop" id="photoshop">
+							<img src="images/photoshop.png" alt="photoshop" id="photoshop">
 						</div>
 					</div>	
 					</div>
