--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<h2><strong>Développeur @Emadis</strong></h2><br>
 		<h3>0692 72 35 47</h3>
 		<h3>emmanuel.narcisse@emadis-shop.fr</h3><br>
-		<p>Profil sur 10 ans d'entreprenariat dans le numérique et l'entertainment. <strong>Expert en transformation digitale </strong> vous permettant l'accélaration de votre croissance.</p>
+		<p>10 ans d'entreprenariat dans le numérique et l'entertainment. <strong>Expert en transformation digitale </strong> vous permettant l'accélaration de votre croissance.</p>
 		
 	</div>
 
