--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<div class="container card text-center">	
 			<h2 class="btn btn-outline-secondary">Expériences</h2><br>
 				<h3>2012 - 2018</h3>
-					<p>@Emadis - CEO - Missions: développement d'une place de marché B to B. Mise en place d'outils d'automatisation des processus de vente.</p><a href="https://emadis-shop.fr">www.emadis-shop.fr</a><br>
+					<p>@Emadis - CEO - Missions: développement d'une place de marché B to B.<br> Mise en place d'outils d'automatisations des processus de vente.</p><a href="https://emadis-shop.fr">www.emadis-shop.fr</a><br>
 				<h3>2013 - 2014</h3>
 					<p>@IOFC - Organisateur - Missions: Stratégie d'entertaiment, réalisation audiovisuel.</p><a href="https://www.youtube.com/user/IOFCTV">www.iofc.tv</a><br>
 				<h3>2011 - 2012</h3>
