--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 	<div class="container card text-center">	
 			<h2 class="btn btn-outline-secondary">Expériences</h2><br>
 				<h3>2012 - 2018</h3>
-					<p>@Emadis - CEO - Missions: développement d'une place de marché B to B.<br> Mise en place d'outils d'automatisations des processus de vente.</p><a href="https://emadis-shop.fr">www.emadis-shop.fr</a><br>
+					<p>@Emadis - CEO - Développement d'une place de marché B to B.<br> Mise en place d'outils d'automatisations des processus de vente.</p><a href="https://emadis-shop.fr">www.emadis-shop.fr</a><br>
 				<h3>2013 - 2014</h3>
-					<p>@IOFC - Organisateur - Missions: Stratégie d'entertaiment, réalisation audiovisuel.</p><a href="https://www.youtube.com/user/IOFCTV">www.iofc.tv</a><br>
+					<p>@IOFC - Organisateur - Stratégie d'entertaiment, réalisation audiovisuel.</p><a href="https://www.youtube.com/user/IOFCTV">www.iofc.tv</a><br>
 				<h3>2011 - 2012</h3>
-					<p>@Net Plus Ultra - Développeur web - Missions : Développement e-commerce et maintenance.</p><br>	
+					<p>@Net Plus Ultra - Développeur web - Développement e-commerce et maintenance.</p><br>	
 				<h3>2009 - 2011</h3>	
-					<p>@Epokweb - Gérant - Missions: développement web</p><br>	
+					<p>@Epokweb - Gérant - Développement web</p><br>	
 				<h3>2007 - 2009</h3>
-					<p>@Web Design OI - Développeur web - Missions : Développement web, accompagnement du client dans la prise en main d'outils digitaux.</p><a href="https://www.webdesign-oi.com/">www.webdesign-io.com</a><br>
+					<p>@Web Design OI - Développeur - Création de site web, accompagnement du client dans la prise en main d'outils digitaux.</p><a href="https://www.webdesign-oi.com/">www.webdesign-io.com</a><br>
 	</div>	
 
 	<!--formation-->	
