--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<div class="spacer"></div>
 				<h3>2016 - 2018</h3>
 					<img src="images/lewagon.png" alt="lewagon-logo" id="wagon-logo">
-					<p>@Le Wagon - Ecole de code</p><br>
+					<p>@Le Wagon - Ecole de code - Le Wagon est classé premier coding bootcamp sur SwitchUp</p><br>
 
 				<h3>2007 - 2009</h3>
 					<p>@Université de La Réunion - Licence 1 - Science de la vie</p><br>
