--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 		  <div class="container">
 		    <div class="row">
 		    	<div class="col.12">
-		    		<p>"Grâce à Emmanuel, nous avons augmenter notre chiffre d'affaire de 85 % entre 2016 et 2017! Un élement innovant et sans cesse en quête d'apprentissage."</p><p class="italic">Emmanuelle Paillot (Gérante Emadistribution)</p><br>
+		    		<p>"Grâce à Emmanuel, nous avons augmenté notre chiffre d'affaire de 85 % entre 2016 et 2017! Un élement innovant et sans cesse en quête d'apprentissage."</p><p class="italic">Emmanuelle Paillot (Gérante Emadistribution)</p><br>
 		     	</div>
 		     	 <div class="col.12">
 		     		 <p>"Les arts martiaux ont pris une tout autre image depuis la stratégie élaborer par Emmanuel, une mise en valeur à l'américaine comme on dit et une excellente gestion des équipes de productions." <br></p><p class="italic">Cédric Certenais (Président MMA974 et FFSCDA)</p><br>
@@ -224,17 +224,17 @@
 			<div class="spacer"></div>
 			<div class="row">
 				<div class="col-6 col-sm-3">
-					<a href="https://drive.google.com/file/d/1OYn-7-iaZRc1kKUO0xIGgQdabRaQma9V/view?usp=sharing" target="_blank"><img src="images/memento.jpg" alt="memento" id="memento"></a> 
+					<a href="https://drive.google.com/file/d/1OYn-7-iaZRc1kKUO0xIGgQdabRaQma9V/view?usp=sharing" target="_blank"><img src="images/memento.jpg" alt="memento" id="memento">Voir l'article</a> 
 				</div>
 
 				<div class="col-6 col-sm-3">
-					<a href="https://drive.google.com/file/d/13_FdVqLzta32QEfmfoY4_XZ4AqSoOXEc/view?usp=sharing" target="_blank"> <img src="images/chr-journal.jpg" alt="chr-journal" id="chr"></a>
+					<a href="https://drive.google.com/file/d/13_FdVqLzta32QEfmfoY4_XZ4AqSoOXEc/view?usp=sharing" target="_blank"> <img src="images/chr-journal.jpg" alt="chr-journal" id="chr">Voir l'article</a>
 				</div>
 				<div class="col-6 col-sm-3">
-					<a href="https://www.zinfos974.com/E-commerce-Emadis-la-marketplace-reunionnaise-dediee-aux-professionnels-de-la-restauration_a119805.html" target="_blank"> <img src="images/zinfo974.jpg" alt="zinfos974" id="zinfos"></a>
+					<a href="https://www.zinfos974.com/E-commerce-Emadis-la-marketplace-reunionnaise-dediee-aux-professionnels-de-la-restauration_a119805.html" target="_blank"> <img src="images/zinfo974.jpg" alt="zinfos974" id="zinfos">Voir l'article</a>
 				</div>
 				<div class="col-6 col-sm-3">
-					<a href="http://lespepitestech.com/startup-de-la-french-tech/emadis" target="_blank"><img src="images/french-tech.png" id="pepite"></a>
+					<a href="http://lespepitestech.com/startup-de-la-french-tech/emadis" target="_blank"><img src="images/french-tech.png" id="pepite">Suivre le lien</a>
 				</div>
 			</div>
 		</div>
