--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 		     		 <p>"Les arts martiaux ont pris une tout autre image depuis la stratégie élaboré par Emmanuel, une mise en valeur à l'américaine comme on dit et une excellente gestion des équipes de productions." <br></p><p class="italic">Cédric Certenais (Président MMA974 et FFSCDA)</p><br>
 		    	</div>
     			<div class="col.12">
-     		 		<p>"Il est arrivé chez nous a à peine 20 ans. Déja ce fut un élément bosseur et à l'écoute. Nous avons garder contact et buvons parfois un café ensemble. J'admire son parcours." </p><p class="italic">Olivier Jouas (Directeur commerciale Web Design OI) </p>
+     		 		<p>"Il est arrivé chez nous a à peine 20 ans. Déja ce fut un élément bosseur et à l'écoute. Nous avons gardé contact et buvons parfois un café ensemble. J'admire son parcours." </p><p class="italic">Olivier Jouas (Directeur commerciale Web Design OI) </p>
    		 		</div>
 		    </div>
 		</div>
