--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<h2><strong>Développeur @Emadis</strong></h2><br>
 		<h3>0692 72 35 47</h3>
 		<h3>emmanuel.narcisse@emadis-shop.fr</h3><br>
-		<p>10 ans d'entreprenariat dans le numérique et l'entertainment. <strong>Expert en transformation digitale </strong> vous permettant l'accélaration de votre croissance.</p>
+		<p>10 ans d'entreprenariat dans le numérique et l'entertainment. <strong>Expert en transformation digitale </strong> vous permettant l'accélération de votre croissance.</p>
 		
 	</div>
 
@@ -55,7 +55,7 @@
 				<h3>2012 - 2018</h3>
 					<p>@Emadis - CEO - Développement d'une place de marché B to B.<br> Mise en place d'outils d'automatisations des processus de vente.</p><a href="https://emadis-shop.fr">www.emadis-shop.fr</a><br>
 				<h3>2013 - 2014</h3>
-					<p>@IOFC - Organisateur - Stratégie d'entertaiment, réalisation audiovisuel.</p><a href="https://www.youtube.com/user/IOFCTV">www.iofc.tv</a><br>
+					<p>@IOFC - Organisateur - Stratégie d'entertainment, réalisation audiovisuel.</p><a href="https://www.youtube.com/user/IOFCTV">www.iofc.tv</a><br>
 				<h3>2011 - 2012</h3>
 					<p>@Net Plus Ultra - Développeur web - Développement e-commerce et maintenance.</p><br>	
 				<h3>2009 - 2011</h3>	
