--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<img id="avatar" src="images/photo-profile.jpg" class="rounded-circle mx-auto d-block">
 		<img src="" alt=""><br>
 		<h1><strong>Emmanuel Narcisse</strong></h1>
-		<h2><strong>Développeur @Emadis</strong></h2><br>
+		<h2><strong>Directeur de l'innovation @Emadis</strong></h2><br>
 		<h3>0692 72 35 47</h3>
 		<h3>emmanuel.narcisse@emadis-shop.fr</h3><br>
 		<p>10 ans d'entreprenariat dans le numérique et l'entertainment. <strong>Expert en transformation digitale </strong> vous permettant l'accélération de votre croissance.</p>
