--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="widt=device, initial-scale=1">
-	<meta name="description" content="10 ans d'expérience dans le numérique et l'entertainment. Expert en transformation digitale vous permettant l'accélaration de votre croissance.">
+	<meta name="description" content="10 ans d'expérience dans le numérique et l'entertainment. Expert en transformation digitale.">
 	<meta property="og:type" content="article">
 	<meta property="og:url" content="http://emmanuelnarcisse.com">
 	<meta property="og:image" content="">
