--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:type" content="article">
 	<meta property="og:url" content="http://emmanuelnarcisse.com">
 	<meta property="og:image" content="">
-	<meta property="og:description" content="Profil sur 11 ans d'expérience dans le numérique et l'entertainment. Expert en transformation digitale.">
+	<meta property="og:description" content="11 ans d'expérience dans le numérique et l'entertainment. Expert en transformation digitale.">
 
 	<meta property="og:site_name" content="Emmanuel Narcisse">
 	<!--<meta property="fb:admins" contant="Facebook numeric ID"> -->
