--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
-	<title>Emmanuel Narcisse - Entrepreneur réunionnais - Expert en transformation digitale - Developpeur front-end</title>
+	<title>Emmanuel Narcisse - Entrepreneur réunionnais - Developpeur</title>
 
 </head>
 <body>
@@ -31,10 +31,10 @@
 		<img id="avatar" src="images/photo-profile.jpg" class="rounded-circle mx-auto d-block">
 		<img src="" alt=""><br>
 		<h1><strong>Emmanuel Narcisse</strong></h1>
-		<h2><strong>Directeur de l'innovation @Emadis</strong></h2><br>
+		<h2><strong>Développeur</strong></h2><br>
 		<h3>0692 72 35 47</h3>
-		<h3>emmanuel.narcisse@emadis-shop.fr</h3><br>
-		<p>11 ans d'expérience dans le numérique et l'entertainment. <strong>Expert en transformation digitale </strong> vous permettant l'accélération de votre croissance.</p>
+		<h3>e.narcisse974@gmail.com</h3><br>
+		<p>11 ans d'expérience dans le numérique et l'entertainment. <strong>développeur web</strong> vous permettant l'accélération de votre croissance.</p>
 		
 	</div>
 
@@ -53,14 +53,12 @@
 	<div class="container card text-center">	
 			<h2 class="btn btn-outline-secondary">Expériences</h2><br>
 				<h3>2012 - 2018</h3>
-					<p>@Emadis - Directeur de l'innovation - Développement d'une place de marché B to B.<br> Mise en place d'outils d'automatisations des processus de vente.</p><a href="https://emadis-shop.fr">www.emadis-shop.fr</a><br>
+					<p>@Emadis - Développeur - Développement d'une place de marché B to B.<br> Mise en place d'outils d'automatisations des processus de vente.</p><a href="https://emadis-shop.fr">www.emadis-shop.fr</a><br>
 				<h3>2013 - 2014</h3>
 					<p>@IOFC - Organisateur - Stratégie d'entertainment, réalisation audiovisuel.</p><a href="https://www.youtube.com/user/IOFCTV">www.iofc.tv</a><br>
 				<h3>2011 - 2012</h3>
-					<p>@Net Plus Ultra - Développeur web - Développement e-commerce et maintenance.</p><br>	
-				<h3>2009 - 2011</h3>	
 					<p>@Epokweb - Gérant - Développement web</p><br>	
-				<h3>2007 - 2009</h3>
+				<h3>2009 - 2010</h3>
 					<p>@Web Design OI - Développeur - Création de site web, accompagnement du client dans la prise en main d'outils digitaux.</p><a href="https://www.webdesign-oi.com/">www.webdesign-io.com</a><br>
 	</div>	
 
@@ -72,10 +70,10 @@
 					<img src="images/lewagon.png" alt="lewagon-logo" id="wagon-logo">
 					<p>@Le Wagon - Ecole de code - Le Wagon est classé premier coding bootcamp sur SwitchUp</p><br>
 
-				<h3>2007 - 2009</h3>
+				<h3>2006 - 2009</h3>
 					<p>@Université de La Réunion - Licence 1 - Science de la vie</p><br>
 
-				<h3>2005 - 2007</h3>
+				<h3>2005 - 2006</h3>
 					<p>@Université de La Réunion - (PCEM1) Préparation au concours d'entrée en médecine</p><br>
 
 				<h3>2002 - 2005</h3>
