--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<h2><strong>Développeur</strong></h2><br>
 		<h3>0692 72 35 47</h3>
 		<h3>e.narcisse974@gmail.com</h3><br>
-		<p>11 ans d'expérience dans le numérique et l'entertainment. <strong>développeur web</strong> vous permettant l'accélération de votre croissance.</p>
+		<p>11 ans d'expérience dans le numérique et l'entertainment. <strong>développeur web</strong>.</p>
 		
 	</div>
 
